# Harmonia

./: .gitignore  LICENSE  README.md
libs/src/libogg/include/ogg/: config_types.h
libs/src/libogg/ios/Ogg.xcodeproj/: project.pbxproj
libs/src/libogg/macosx/Ogg.xcodeproj/: project.pbxproj
libs/src/libvorbis/ios/Vorbis.xcodeproj/: project.pbxproj
libs/src/libvorbis/macosx/Vorbis.xcodeproj/: project.pbxproj
libs/win/: libogg_static.lib  libvorbis_static.lib
platform/android/Harmonia/: settings.gradle
platform/android/Harmonia/androidaudiomanager/: build.gradle
platform/android/Harmonia/app/: CMakeLists.txt  build.gradle
platform/android/Harmonia/app/src/androidTest/java/jp/hiiragi/harmonia/: ExampleInstrumentedTest.java
platform/android/Harmonia/app/src/main/: AndroidManifest.xml
platform/android/Harmonia/app/src/main/cpp/: native-lib.cpp
platform/android/Harmonia/app/src/main/java/jp/hiiragi/harmonia/: MainActivity.java
platform/android/Harmonia/app/src/main/res/layout/: activity_main.xml
platform/android/Harmonia/app/src/main/res/values/: strings.xml
platform/android/Harmonia/app/src/test/java/jp/hiiragi/harmonia/: ExampleUnitTest.java
platform/android/Harmonia/gradle/wrapper/: gradle-wrapper.properties
platform/ios/Harmonia/Harmonia.xcodeproj/: project.pbxproj
platform/ios/Harmonia/Harmonia_TestApp/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
platform/ios/Harmonia/Harmonia_TestAppTests/: Harmonia_TestAppTests.m
platform/ios/Harmonia/Harmonia_TestAppUITests/: Harmonia_TestAppUITests.m
platform/mac/Harmonia/Harmonia/: Info.plist
platform/mac/Harmonia/Harmonia.xcodeproj/: project.pbxproj
platform/mac/Harmonia/Harmonia.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
platform/mac/Harmonia/Harmonia_TestApp/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
platform/mac/Harmonia/Harmonia_TestApp/Base.lproj/: Main.storyboard
platform/mac/Harmonia/Harmonia_TestAppTests/: Harmonia_TestAppTests.m
platform/mac/Harmonia/Harmonia_TestAppUITests/: Harmonia_TestAppUITests.m
platform/web/: index.html
platform/win/Harmonia/: Harmonia.sln
platform/win/Harmonia/Harmonia/: Harmonia.vcxproj  Harmonia.vcxproj.filters  stdafx.cpp
platform/win/Harmonia/HarmoniaTestApp/: HarmoniaTestApp.aps  HarmoniaTestApp.cpp  HarmoniaTestApp.rc  HarmoniaTestApp.vcxproj  HarmoniaTestApp.vcxproj.filters  resource.h  stdafx.cpp
platform/win/Harmonia/HarmoniaTestConsoleApp/: HarmoniaTestConsoleApp.cpp  HarmoniaTestConsoleApp.vcxproj  HarmoniaTestConsoleApp.vcxproj.filters  stdafx.cpp  stdafx.h
src/c/: AbstractEffectCommand.cpp  AbstractEffectCommand.h  AbstractSoundData.cpp  AbstractSoundData.h  DuckerCommand.cpp  DuckerCommand.h  Harmonia.cpp  Harmonia.h  HarmoniaErrorData.cpp  HarmoniaErrorData.h  HarmoniaErrorType.h  HarmoniaInterface.cpp  HarmoniaInterface.h  PlayingData.cpp  PlayingData.h  RegisteredSoundData.cpp  RegisteredSoundData.h  SoundEventData.cpp  SoundEventData.h  SoundEventType.h  SoundGroup.cpp  SoundGroup.h  SoundStatus.h
src/js/: Harmonia.js
src/js/ts/js/: package-lock.json  package.json  tsconfig.json
src/js/ts/js/src/: AbstractEffectCommand.ts  AbstractSoundData.ts  DuckerCommand.ts  Harmonia.ts  HarmoniaErrorData.ts  HarmoniaErrorType.ts  PlayingData.ts  RegisteredSoundData.ts  SoundEventData.ts  SoundEventType.ts  SoundGroup.ts  SoundStatus.ts
unity_test/HarmoniaTest/: Assembly-CSharp.csproj  HarmoniaTest.csproj  HarmoniaTest.sln
unity_test/HarmoniaTest/Assets/: se_sample.bytes
unity_test/HarmoniaTest/Assets/Harmonia/: Harmonia.cs  HarmoniaErrorData.cs  HarmoniaEventData.cs  HarmoniaGroup.cs  HarmoniaRegister.cs  HarmoniaSoundChannel.cs
unity_test/HarmoniaTest/Assets/Scenes/: Main.unity
unity_test/HarmoniaTest/Assets/Scripts/: HarmoniaBehaviour.cs
unity_test/HarmoniaTest/ProjectSettings/: ProjectSettings.asset
(+48 files in other folders)
